<resources>
    <string name="app_name">OnBoardingScereen</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="onboardingscreen1">OnBoardingScreen1</string>
    <string name="decsonboardingscreen">decsOnBoardingScreen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="getting_started">Getting Started</string>
    <string name="create_an_account_to_continue">Create an account to continue!</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>