<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignupFragment">

    <ImageView

        android:id="@+id/splash_image"
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="125dp"
        android:src="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/getting_started"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/create_an_account_to_continue"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittext_fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:hint="  Full Name"
        android:importantForAutofill="no"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editTextTelephoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:hint="  Phone Number"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="  Email"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
        android:hint="  Password"
        android:padding="10dp" />



    <!--    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton-->
    <!--        android:id="@+id/btn_id"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@drawable/circular_border_shape"-->
    <!--        app:spinning_bar_color="#FFF"-->
    <!--        app:spinning_bar_padding="6dp"-->
    <!--        app:spinning_bar_width="4dp" />-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="40dp"
        android:text="@string/sign_up"
        android:padding="15dp"
        app:cornerRadius="10dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/purple_200"
        app:background="@drawable/buttonview"
        app:backgroundTint="@color/white"
        app:strokeColor="@color/purple_200"
        app:strokeWidth="1dp" />

    <View
        android:id="@+id/view"
        android:layout_width="82dp"
        android:layout_height="1dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="590dp"
        android:layout_marginEnd="43dp"
        android:background="@color/gray" />

    <TextView
        android:id="@id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/view"
        android:layout_marginStart="87dp"
        android:layout_marginTop="583dp"
        android:text="@string/or_continue_with" />

    <View
        android:layout_width="82dp"
        android:layout_height="1dp"
        android:layout_alignEnd="@id/text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="590dp"
        android:layout_marginEnd="46dp"
        android:background="@color/gray" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="630dp"
        android:src="@drawable/facebook" />

    <ImageView

        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="630dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/gogle" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="630dp"
        android:layout_marginEnd="46dp"
        android:src="@drawable/mac" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="680dp"
        android:text="@string/already_have_an_account"/>

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="680dp"
        android:layout_marginEnd="90dp"
        android:text="@string/sign_in"
        android:textColor="@color/purple_200"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>